--- a/c284a86/c284a86_vs_c284a86.md
+++ b/c284a86/c284a86_vs_c284a86.md
@@ -4,7 +4,7 @@
 
 *Commit(s):* [jrevels/julia@c284a86dc9a198e30a914cdb2523391884482df8](https://github.com/jrevels/julia/commit/c284a86dc9a198e30a914cdb2523391884482df8) vs [jrevels/julia@c284a86dc9a198e30a914cdb2523391884482df8](https://github.com/jrevels/julia/commit/c284a86dc9a198e30a914cdb2523391884482df8)
 
-*Triggered By:* [link](https://github.com/jrevels/julia/pull/2#issuecomment-217742463)
+*Triggered By:* [link](https://github.com/jrevels/julia/pull/2#issuecomment-217750400)
 
 *Tag Predicate:* `ALL`
 
@@ -29,10 +29,7 @@ benchmark results remained invariant between builds).
 
 | ID | time ratio | memory ratio |
 |----|------------|--------------|
-| `["array","index",("sumelt_boundscheck","BaseBenchmarks.ArrayBenchmarks.ArrayLSLS{Int32,2}")]` | 0.77 (15.00%) :white_check_mark: | 1.00 (1.00%)  |
-| `["array","index",("sumelt_boundscheck","BaseBenchmarks.ArrayBenchmarks.ArrayLS{Float32,2}")]` | 0.71 (15.00%) :white_check_mark: | 1.00 (1.00%)  |
-| `["array","index",("sumrange","100000000:-1:1")]` | 0.68 (15.00%) :white_check_mark: | 1.00 (1.00%)  |
-| `["scalar","arithmetic",("div","Complex{Float32}","Complex{Float32}")]` | 0.83 (15.00%) :white_check_mark: | 1.00 (1.00%)  |
+| `["linalg","factorization",("lu","Tridiagonal",1024)]` | 1.22 (15.00%) :x: | 1.00 (1.00%)  |
 
 ## Benchmark Group List
 
@@ -89,15 +86,15 @@ Platform Info:
   WORD_SIZE: 64
            Ubuntu 14.04.4 LTS
   uname: Linux 3.13.0-85-generic #129-Ubuntu SMP Thu Mar 17 20:50:15 UTC 2016 x86_64 x86_64
-Memory: 31.383651733398438 GB (22165.359375 MB free)
-Uptime: 277317.0 sec
-Load Avg:  1.0234375  1.02392578125  0.96533203125
+Memory: 31.383651733398438 GB (22098.35546875 MB free)
+Uptime: 286952.0 sec
+Load Avg:  1.0029296875  1.0146484375  0.96533203125
 Intel(R) Xeon(R) CPU E3-1241 v3 @ 3.50GHz: 
        speed         user         nice          sys         idle          irq
-#1  3501 MHz     660748 s          0 s     130278 s   26854710 s          0 s
-#2  3501 MHz    3007163 s          0 s      83800 s   24627567 s          0 s
-#3  3501 MHz     640810 s          0 s      74320 s   27000631 s          1 s
-#4  3501 MHz     648526 s          0 s      73968 s   26996134 s          0 s
+#1  3501 MHz     818894 s          0 s     146088 s   27641343 s          0 s
+#2  3501 MHz    3470966 s          0 s      99723 s   25110459 s          0 s
+#3  3501 MHz     771483 s          0 s      88089 s   27818056 s          1 s
+#4  3501 MHz     763132 s          0 s      86898 s   27831040 s          0 s
 
   BLAS: libopenblas (USE64BITINT DYNAMIC_ARCH NO_AFFINITY Haswell)
   LAPACK: libopenblas64_
@@ -117,15 +114,15 @@ Platform Info:
   WORD_SIZE: 64
            Ubuntu 14.04.4 LTS
   uname: Linux 3.13.0-85-generic #129-Ubuntu SMP Thu Mar 17 20:50:15 UTC 2016 x86_64 x86_64
-Memory: 31.383651733398438 GB (22132.90234375 MB free)
-Uptime: 281935.0 sec
+Memory: 31.383651733398438 GB (22088.32421875 MB free)
+Uptime: 291566.0 sec
 Load Avg:  1.0029296875  1.001953125  0.9599609375
 Intel(R) Xeon(R) CPU E3-1241 v3 @ 3.50GHz: 
        speed         user         nice          sys         idle          irq
-#1  3501 MHz     724954 s          0 s     137400 s   27243756 s          0 s
-#2  3501 MHz    3252602 s          0 s      92034 s   24835253 s          0 s
-#3  3501 MHz     701329 s          0 s      81299 s   27394114 s          1 s
-#4  3501 MHz     711509 s          0 s      80664 s   27387728 s          0 s
+#1  3501 MHz     892538 s          0 s     154260 s   28019453 s          0 s
+#2  3501 MHz    3651340 s          0 s     105442 s   25385292 s          0 s
+#3  3501 MHz     872732 s          0 s      96164 s   28169348 s          1 s
+#4  3501 MHz     840582 s          0 s      94095 s   28207194 s          0 s
 
   BLAS: libopenblas (USE64BITINT DYNAMIC_ARCH NO_AFFINITY Haswell)
   LAPACK: libopenblas64_
